--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/immutable": "^3.8.7",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/slate": "^0.44.12",
     "@types/slate-react": "^0.22.2",
+    "fbjs": "^1.0.0",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.14",
     "react": "^16.8.6",
